--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,6 +20,7 @@ jobs:
     env:
       JAVA_VERSION: '21'
       JAVA_DISTRIBUTION: 'temurin'
+      DOCKERFILE_LOCATION: './vehicle/target/Dockerfile'
       IMAGE_TAG: 'latest'
 
     steps:
@@ -31,13 +32,13 @@ jobs:
           distribution: ${{ env.JAVA_DISTRIBUTION }}
 
       - name: Build vehicle project with maven
+        working-directory: ./vehicle
         run: | # multi line string operator
-          cd ./vehicle
           mvn clean package
           cp ./src/main/docker/Dockerfile ./target
-          cd ./target
 
-      - name: check dir
+      - name: check Dockerfile
+        working-directory: ./vehicle/target
         run: dir
 
       - name: Build and publish a Docker image
@@ -47,4 +48,5 @@ jobs:
           image_name: ${{ github.repository }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
           image_tag: ${{ env.IMAGE_TAG }}
+          dockerfile: ${{ env.DOCKERFILE_LOCATION }}
 
