--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,11 +18,11 @@ jobs:
     name: Build vehicle
     runs-on: ubuntu-24.04
     env:
-      REPOSITORY: 'HikariTempest/vehicle'
       JAVA_VERSION: '21'
       JAVA_DISTRIBUTION: 'temurin'
       DOCKERFILE_LOCATION: './vehicle/target/Dockerfile'
       IMAGE_TAG: 'latest'
+
 
     steps:
       - uses: actions/checkout@v4
@@ -42,14 +42,17 @@ jobs:
         working-directory: ./vehicle/target
         run: dir
 
+      - name: Set lowercase repository name
+        id: set-repo-name
+        run: echo "REPOSITORY=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
       - name: Build Docker image
-        run: docker build --tag ghcr.io/${{ github.repository }}:${{ env.IMAGE_TAG }} ${{ env.DOCKERFILE_LOCATION }}
+        run: docker build --tag ghcr.io/${{ env.REPOSITORY }}:${{ env.IMAGE_TAG }} ${{ env.DOCKERFILE_LOCATION }}
 
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Push Docker image
-        run: docker push ghcr.io/${{ github.repository }}:${{ env.IMAGE_TAG }}
+        run: docker push ghcr.io/${{ env.REPOSITORY }}:${{ env.IMAGE_TAG }}
 
 
-        
