--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,17 +42,16 @@ jobs:
         working-directory: ./vehicle/target
         run: dir
 
-      - name: Set lowercase repository name
-        id: set-repo-name
-        run: echo "REPOSITORY=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $REPOSITORY
-
-      - name: Build Docker image
-        run: docker build --tag ghcr.io/${{ env.REPOSITORY }}:${{ env.IMAGE_TAG }} ${{ env.DOCKERFILE_LOCATION }}
-
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Push Docker image
-        run: docker push ghcr.io/${{ env.REPOSITORY }}:${{ env.IMAGE_TAG }}
-
-
+      - name: Build and publish Docker image
+        run: |
+          echo "REPOSITORY=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $REPOSITORY
+          
+          docker build --tag ghcr.io/$REPOSITORY:${{ env.IMAGE_TAG }} ${{ env.DOCKERFILE_LOCATION }}
+          
+          docker push ghcr.io/$REPOSITORY:${{ env.IMAGE_TAG }}
+          
+          
+          
