--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,11 +47,9 @@ jobs:
 
       - name: Build and publish Docker image
         run: |
-          echo "REPOSITORY=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $REPOSITORY
+          REPOSITORY=$(echo "REPOSITORY=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')")
           
           docker build --tag ghcr.io/$REPOSITORY:${{ env.IMAGE_TAG }} ${{ env.DOCKERFILE_LOCATION }}
           
           docker push ghcr.io/$REPOSITORY:${{ env.IMAGE_TAG }}
-          
-          
-          
+
