feat: list images

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,5 +51,7 @@ jobs:
           
           docker build --tag ghcr.io/$REPOSITORY:${{ env.IMAGE_TAG }} ${{ env.DOCKERFILE_LOCATION }}
           
+          docker image ls
+          
           docker push ghcr.io/$REPOSITORY:${{ env.IMAGE_TAG }}
-
+          
