--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,7 @@ jobs:
       JAVA_DISTRIBUTION: 'temurin'
       DOCKERFILE_LOCATION: './vehicle/target/'
       IMAGE_TAG: 'latest'
-
+      REPOSITORY: 'HikariTempest/01-referate-HikariTempest'
 
     steps:
       - uses: actions/checkout@v4
@@ -48,11 +48,9 @@ jobs:
 
       - name: Build and publish Docker image
         run: |
-          REPOSITORY=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')
-          
+          REPOSITORY=$(echo '${{ env.REPOSITORY }}' | tr '[:upper:]' '[:lower:]')
+
           docker build --tag ghcr.io/$REPOSITORY:${{ env.IMAGE_TAG }} ${{ env.DOCKERFILE_LOCATION }}
-          
-          dir
-          
+
           docker push ghcr.io/$REPOSITORY:${{ env.IMAGE_TAG }}
           
