--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,7 +23,6 @@ jobs:
       JAVA_DISTRIBUTION: 'temurin'
       DOCKERFILE_LOCATION: './vehicle/target/'
       IMAGE_TAG: 'latest'
-      REPOSITORY: 'HikariTempest/'
 
     steps:
       - uses: actions/checkout@v4
@@ -48,7 +47,7 @@ jobs:
 
       - name: Build and publish Docker image
         run: |
-          REPOSITORY=$(echo '${{ env.REPOSITORY }}' | tr '[:upper:]' '[:lower:]')
+          REPOSITORY=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')
 
           docker build --tag ghcr.io/$REPOSITORY:${{ env.IMAGE_TAG }} ${{ env.DOCKERFILE_LOCATION }}
 
