--- a/vehicle/k8s/appsrv.yaml
+++ b/vehicle/k8s/appsrv.yaml
@@ -52,4 +52,22 @@ spec:
       protocol: TCP
   selector:
     app: appsrv
-
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: appsrv-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+spec:
+  rules:
+    - host: https://if200112.cloud.htl-leonding.ac.at/
+      http:
+        paths:
+          - path: /api
+            pathType: Prefix
+            backend:
+              service:
+                name: appsrv
+                port:
+                  number: 8080
