fix: fixed error where I used the wrong environment variable

--- a/.github/workflows/release-artifacts.yaml
+++ b/.github/workflows/release-artifacts.yaml
@@ -37,6 +37,6 @@ jobs:
             --title "vehicle $tag" \
             --notes-file release-notes.txt \
             --prerelease \
-            ${{ env.Runner_LOCATION }}
+            ${{ env.RUNNER_LOCATION }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
