--- a/vehicle/k8s/appsrv.yaml
+++ b/vehicle/k8s/appsrv.yaml
@@ -44,27 +44,28 @@ apiVersion: v1
 kind: Service
 metadata:
   name: appsrv
-
 spec:
-  ports:
-    - port: 8080
-      targetPort: 8080
-      protocol: TCP
   selector:
     app: appsrv
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: appsrv-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  # annotations:
+    # if the exposed path doesn't match backend path
+    # INGRESS.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
-    - host: https://if200112.cloud.htl-leonding.ac.at/
+    - host: if200112.cloud.htl-leonding.ac.at
       http:
         paths:
-          - path: /api
+          - path: /
             pathType: Prefix
             backend:
               service:
